# showdown

./: Dockerfile  PROTOCOL.md  README.md  docker-compose.yml
.gitea/workflows/: buildanddeploy.yml
backend/: Cargo.toml  README.md
backend/src/: main.rs  room.rs  ws.rs
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: CardHand.tsx  Cards.tsx  Confetti.tsx  DeckModal.tsx  Logo.tsx  PlayerSeat.tsx  ProfileForm.tsx  Results.tsx  Table.tsx
frontend/src/lib/: connection.ts  decks.ts  game.ts  router.ts  session.ts
frontend/src/pages/: Home.tsx  Room.tsx  Tv.tsx
